[#298] delay after station reset, chip info menu icon changed

--- a/SportiduinoManager/app/src/main/res/menu/menu_navigation.xml
+++ b/SportiduinoManager/app/src/main/res/menu/menu_navigation.xml
@@ -25,7 +25,7 @@
             android:title="@string/mode_team_list" />
         <item
             android:id="@+id/chip_info"
-            android:icon="@drawable/ic_chip_init"
+            android:icon="@drawable/ic_chip_info"
             android:title="@string/mode_chip_info" />
     </group>
 
