--- a/SportiduinoManager/app/src/main/res/layout/activity_activepoint.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_activepoint.xml
@@ -38,7 +38,7 @@
         android:id="@+id/ap_team_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="ap_team_name,ap_team_time,ap_members_count,ap_divider_2,ap_team_list" />
+        app:constraint_referenced_ids="ap_team_name,ap_team_time,ap_visited,ap_skipped,ap_members_count,ap_divider_2,ap_team_list" />
 
     <TextView
         android:id="@+id/ap_team_name"
