--- a/SportiduinoManager/app/src/main/res/values/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values/errors.xml
@@ -9,6 +9,7 @@
     <string name="err_db_reading_response">I/O error while reading server response</string>
     <string name="err_db_bad_response">Error in response format</string>
     <string name="err_db_internal_error">Unexpected internal error</string>
+    <string name="err_db_sql_error">Internal SQL database error</string>
     <string name="err_db_no_distance_loaded">Distance was not loaded from site</string>
 
     <string name="err_bt_absent">Device does not support Bluetooth</string>
@@ -24,17 +25,27 @@
     <string name="err_init_no_station">Connect to a station to be able to init chips</string>
     <string name="err_init_wrong_mode">Switch the station to chip init mode</string>
 
-    <string name="err_station_wrong">Wrong station number in the command</string>
+    <string name="err_station_wrong_number">Wrong station number in the command</string>
     <string name="err_station_read">A error while reading chip data</string>
     <string name="err_station_write">A error while writing data to chip</string>
     <string name="err_station_init_chip">The chip is already initialized</string>
     <string name="err_station_bad_chip">Use the same chip to write updated mask to it</string>
     <string name="err_station_no_chip">Put the chip near the station</string>
     <string name="err_station_buffer_overflow">Station buffer overflow</string>
-    <string name="err_station_reset_impossible">Station reset is impossible, new dara have
+    <string name="err_station_reset_impossible">Station reset is impossible, new data have
         been appeared</string>
     <string name="err_station_incorrect_uid">Incorrect chip UID</string>
+    <string name="err_station_wrong_team">Wrong team number in the command</string>
+    <string name="err_station_no_data">No data for the team</string>
+    <string name="err_station_bad_command">Unsupported function</string>
+    <string name="err_station_erase_flash">Error erasing station flash memory</string>
+    <string name="err_station_bad_chip_type">Incorrect chip type</string>
+
     <string name="err_station_unknown">The station returned an unknown error</string>
+    <string name="err_station_absent">Station is not connected via BT</string>
+    <string name="err_station_team_changed">Wrong team number in station response</string>
+    <string name="err_station_address_changed">Wrong flash memory address in station
+        response</string>
 
     <string name="err_todo_team_list">Team list mode is not supported yet</string>
 </resources>
