--- a/SportiduinoManager/app/src/main/res/layout/member_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/member_list_item.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:minHeight="?android:listPreferredItemHeight"
     android:orientation="horizontal"
     android:theme="@style/AppTheme">
 
@@ -16,6 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="@dimen/default_padding"
+        android:layout_marginTop="@dimen/list_padding"
+        android:layout_marginBottom="@dimen/list_padding"
         android:checked="true"
         android:focusable="false"
         android:textAppearance="@style/AppTheme.TextMedium"
