SportiduinoManager: better support for station flash errors

--- a/SportiduinoManager/app/src/main/res/layout/activity_database.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_database.xml
@@ -97,7 +97,7 @@
                     android:id="@+id/test_database"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:checked="false"
+                    android:checked="true"
                     android:padding="@dimen/default_padding"
                     android:text="@string/use_test_site"
                     local:showText="false" />
