--- a/SportiduinoManager/app/src/main/res/values-ru/usage.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/usage.xml
@@ -35,7 +35,7 @@
 <li>Когда всё проверено и отмечено, нужно положить чип сверху на станцию и нажать кнопку &quot;Записать чип&quot;.</li>
 <li>Появится бегунок прогресса (ждать и чип не трогать), затем появится сообщение об успехе и информация о команде исчезнет из формы.</li>
 <li>Если чип убрать раньше времени, то появится сообщение о сбое. Чип в этой ситуации не записан, его можно попытаться инициализировать повторно.</li>
-<li>Периодически, когда очереди желающих получить чип нет, нужно заходить на экран работы с сайтом и нажимать кнопку &quot;Отправить мои данные на сайт&quot;.</li>
+<li>Периодически, когда очереди желающих получить чип нет, нужно заходить на экран работы с сайтом и нажимать кнопку &quot;Отправить мои данные на сайт&quot; (если на точке есть интернет).</li>
 </ul>
 
 <h2>Начало работы на активной точке</h2>
@@ -61,7 +61,7 @@
 <li>Целесообразно на одной станции принимать только команды из &quot;одиночек&quot; с синими чипами, а на второй - всех остальных.</li>
 <li>Если в команде есть сошедшие участники, которые в приложении показаны как присутствующие, то нужно снять им галочки и нажать кнопку &quot;Зарегистрировать сход&quot;.</li>
 <li>После регистрации схода надо попросить команду повторно поднести чип к станции. Если команда уже убежала - не страшно, в базе сход зарегистрирован.</li>
-<li>Периодически, когда очереди из команд нет, нужно заходить на экран работы с сайтом и нажимать кнопку &quot;Отправить мои данные на сайт&quot;.</li>
+<li>Периодически, когда очереди из команд нет, нужно заходить на экран работы с сайтом и нажимать кнопку &quot;Отправить мои данные на сайт&quot; (если на точке есть интернет).</li>
 <li>Если команд нет и не ожидается, можно гасить экран планшета, но не отключаться от станции.</li>
 </ul>
 
@@ -73,7 +73,7 @@
 <li>Начнётся сохранение данных со станции в планшет перед сменой ее номера.</li>
 <li>После сохранения данных станция сотрет все данные в своей памяти, сменит номер точки и пискнет. Данные по старой точке останутся только на планшете волонтёра.</li>
 <li>В случае сбоев при сохранении данных, станция точку не сменит, можно будет повторить попытку. Данные будут пытаться сохраниться повторно.</li>
-<li>После завершения процесса надо зайти на экран работы с сайтом и нажать кнопку &quot;Отправить мои данные на сайт&quot;.</li>
+<li>После завершения процесса надо зайти на экран работы с сайтом и нажать кнопку &quot;Отправить мои данные на сайт&quot;. Если на точке нет интернета, то нужно отправить данные сразу, как только интернет появится.</li>
 </ul>
 
 <h2>Особенности работы на активных точках разных типов</h2>
