Импорт данных электронной отметки в таблицы с результатами команд

--- a/SportiduinoManager/app/src/main/res/values-ru/usage.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/usage.xml
@@ -4,6 +4,12 @@
     <string name="app_usage"><![CDATA[
 <h1>Описание работы</h1>
 
+<h2>Подготовка оборудования перед ММБ</h2>
+<ul>
+<li>Все станции должны быть переведены на точку "Инициализация чипов" вне зависимости от планируемого места их использования на дистанции.</li>
+<li>Все чипы, которые были использованы для тестирования менее, чем за неделю до старта, должны быть полностью стерты или оставлены в Москве.</li>
+</ul>
+
 <h2>Загрузка данных</h2>
 <ul>
 <li>Если приложение тестировалось до ММБ - удалить тестовую версию со всеми данными.<br></li>
@@ -110,6 +116,14 @@
 <ul>
 <li>Неправильный чип забрать и отложить в специальный пакет, который не трогать до конца ммб.</li>
 <li>Инициализировать новый чип с правильным номером и выдать его команде.</li>
+</ul>
+</li>
+<li><strong>При первом подключении к станции обнаружилось, что на ней остались результаты тестирования</strong>
+<ul>
+<li>Выбрать пункт меню &quot;Настройка станции&quot;.</li>
+<li>Перевести станцию в режим &quot;Инициализация&quot; на точке &quot;Инициализация чипов&quot;.</li>
+<li>После этого память станции будет очищена, а результаты тестирования попадут в приложение.</li>
+<li>Чтобы результаты тестирования не попали на сайт, удалите приложение, заново установите его и заново скачайте дистанцию.</li>
 </ul>
 </li>
 <li><strong>Команда на точке заявила об утере своего чипа</strong>
