--- a/SportiduinoManager/app/src/main/res/layout/activity_database.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_database.xml
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="false"
-                android:onClick="startChipEventsUpload"
+                android:onClick="startRecordsUpload"
                 android:padding="@dimen/default_padding"
                 android:text="@string/send_results" />
 
