SportiduinoManager: some more variables renaming + adaptation for Android API 14

--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
@@ -2,6 +2,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -48,7 +49,8 @@
             android:text="@string/unknown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chip_info_request_frame" />
+            app:layout_constraintTop_toBottomOf="@+id/chip_info_request_frame"
+            tools:targetApi="jelly_bean" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
