--- a/SportiduinoManager/app/src/main/res/layout/member_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/member_list_item.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginStart="@dimen/default_padding"
+        android:layout_marginLeft="@dimen/default_padding"
         android:layout_marginTop="@dimen/list_padding"
         android:layout_marginBottom="@dimen/list_padding"
         android:checked="true"
