--- a/SportiduinoManager/app/src/main/res/layout/team_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/team_list_item.xml
@@ -13,6 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/default_padding"
+        android:layout_marginLeft="@dimen/default_padding"
         android:gravity="start|center_vertical"
         android:text="@string/cp_team_name"
         app:layout_constraintEnd_toStartOf="@id/list_team_count"
@@ -34,6 +35,7 @@
         android:layout_width="112dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="@dimen/default_padding"
+        android:layout_marginRight="@dimen/default_padding"
         android:gravity="center|end"
         android:text="@string/list_team_time"
         app:layout_constraintEnd_toEndOf="parent"
