--- a/SportiduinoManager/app/src/main/res/layout/device_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/device_list_item.xml
@@ -10,19 +10,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/default_padding"
+        android:layout_marginLeft="@dimen/default_padding"
         android:layout_toStartOf="@+id/device_connect"
+        android:layout_toLeftOf="@+id/device_connect"
         tools:ignore="SelectableText"
         tools:text="Device XXX" />
 
     <ImageButton
-        android:id="@id/device_connect"
+        android:id="@+id/device_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/default_padding"
+        android:layout_marginRight="@dimen/default_padding"
         android:contentDescription="@string/device_connect_description"
         android:padding="@dimen/default_padding"
         android:src="@drawable/ic_disconnected"
