--- a/SportiduinoManager/app/src/main/res/layout/menu_header.xml
+++ b/SportiduinoManager/app/src/main/res/layout/menu_header.xml
@@ -14,17 +14,22 @@
         android:contentDescription="@string/menu_back"
         android:onClick="closeNavigationDrawer"
         android:paddingStart="?attr/listPreferredItemPaddingLeft"
+        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
         android:paddingEnd="?attr/listPreferredItemPaddingRight"
+        android:paddingRight="?attr/listPreferredItemPaddingRight"
         local:srcCompat="?homeAsUpIndicator" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginEnd="?attr/listPreferredItemPaddingRight"
+        android:layout_marginRight="?attr/listPreferredItemPaddingRight"
         android:gravity="start|center_vertical"
         android:singleLine="true"
-        android:text="@string/navigation_header"/>
+        android:text="@string/navigation_header" />
 
 </RelativeLayout>
