SportiduinoManager: some UI tuning + station commands are now synchronized

--- a/SportiduinoManager/app/src/main/res/values/colors.xml
+++ b/SportiduinoManager/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="text_primary">#212121</color>
     <color name="text_secondary">#757575</color>
+    <color name="text_secondary_light">#BDBDBD</color>
     <color name="text_primary_inverse">#ffffff</color>
     <color name="bg_primary">#388e3c</color>
     <color name="bg_primary_dark">#1b5e20</color>
