--- a/SportiduinoManager/app/src/main/res/layout/activity_main.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -34,6 +35,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemIconTint="@color/menu_selector"
+        app:itemTextColor="@color/menu_selector"
         local:headerLayout="@layout/menu_header"
         local:menu="@menu/menu_navigation" />
 
