--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinfo.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <FrameLayout
-            android:id="@+id/chip_info_request_frame"
+            android:id="@+id/info_request_frame"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
@@ -23,34 +23,102 @@
             app:layout_constraintVertical_bias="0.5">
 
             <Button
-                android:id="@+id/chip_info_request"
+                android:id="@+id/info_request_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:onClick="readChipInfo"
-                android:text="@string/chip_info_request" />
+                android:text="@string/info_request" />
 
             <ProgressBar
-                android:id="@+id/chip_info_request_progress"
+                android:id="@+id/info_request_progress"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:visibility="invisible" />
-
         </FrameLayout>
 
+
         <TextView
-            android:id="@+id/chip_info_text"
+            android:id="@+id/info_help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
-            android:fontFamily="monospace"
+            android:scrollHorizontally="false"
+            android:text="@string/info_help"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info_request_frame" />
+
+
+        <android.support.constraint.Group
+            android:id="@+id/info_team_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="info_team_name,info_init_time,info_member_list,info_divider,info_point_list" />
+
+        <TextView
+            android:id="@+id/info_team_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_padding"
+            android:scrollHorizontally="false"
+            android:text="@string/info_team_name"
+            android:textAppearance="@style/AppTheme.TextMedium"
+            android:textColor="@color/text_primary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info_request_frame" />
+
+        <TextView
+            android:id="@+id/info_init_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_padding"
             android:text="@string/unknown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chip_info_request_frame"
-            tools:targetApi="jelly_bean" />
+            app:layout_constraintTop_toBottomOf="@+id/info_team_name" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/info_member_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:choiceMode="multipleChoice"
+            android:clickable="false"
+            android:focusable="false"
+            android:scrollbars="none"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info_init_time"
+            tools:itemCount="4"
+            tools:listitem="@layout/member_list_item" />
+
+        <View
+            android:id="@+id/info_divider"
+            style="@style/Divider"
+            android:layout_margin="@dimen/default_padding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info_member_list" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/info_point_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/default_padding"
+            android:layout_marginBottom="@dimen/default_padding"
+            android:clickable="false"
+            android:focusable="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info_divider"
+            tools:itemCount="5"
+            tools:listitem="@layout/point_list_item" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
