--- a/SportiduinoManager/app/src/main/res/values-ru/usage.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/usage.xml
@@ -12,10 +12,9 @@
 
 <h2>Загрузка данных</h2>
 <ul>
-<li>Если приложение тестировалось до ММБ - удалить тестовую версию со всеми данными.<br></li>
+<li>Если приложение тестировалось до ММБ - удалить приложение со всеми данными.<br></li>
 <li>Установить последнюю версию приложения.</li>
 <li>Выбрать пункт меню &quot;Получить дистанцию с сайта&quot;.</li>
-<li>На ММБ-2019-весна включить галочку &quot;Использовать тестовый сайт&quot;.</li>
 <li>Ввести свои емейл и пароль с сайта mmb.progressor.ru.</li>
 <li>Загрузить данные с сайта.</li>
 </ul>
